--- a/animation.html
+++ b/animation.html
@@ -53,7 +53,7 @@
     
 
 
-    <div id="content" class="page-content" style="background-image:url('images/gallery/full/01/01Screen_bg.png');height:790px">
+    <div id="content" class="page-content" style="background-image:url('images/gallery/full/01/01Screen_bg.png');">
     	<div class="content-controls">
         	<a href="chapter.html" class="deploy-back"></a>
             <em class="content-title">CHAPTER 1 COURSE MANUAL</em>
@@ -79,7 +79,7 @@
 				<a href="quiz.html" class="button-big button-green">Quiz</a>
 				</div>
 				<div style="width: 60%;float: left;">
-				<embed src="airport.pdf" width="100%" height="560" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html" />
+				<iframe height="540px" class="responsive-video" src="http://player.vimeo.com/video/87079432"></iframe>
 				</div>
 				<div class="onefourth" style="width:18%">
 				<img class="responsive-image" style="margin-bottom: 0px;" src="images/gallery/full/chaptersidebar.png" alt="img">
