--- a/profile_setting.html
+++ b/profile_setting.html
@@ -48,7 +48,7 @@
 </div>
 
 
-<div class="all-elements" style="border-bottom: 4px solid #27ae60;">
+<div class="all-elements" >
     <div id="sidebar" class="page-sidebar">
         <div class="page-sidebar-scroll">
             <div class="sidebar-controls">
@@ -73,6 +73,9 @@
             
             <div class="navigation-items">
                 <div class="nav-item">
+                    <a href="home.html" class="home-nav">Home<em class="unselected-nav"></em></a>
+                </div>
+				<div class="nav-item">
                     <a href="my_course.html" class="mycourse-nav">My Ongoing Courses<em class="unselected-nav"></em></a>
                 </div>
                 <div class="sidebar-decoration"></div>
@@ -155,7 +158,7 @@
                 </div>
 				</div>
 				
-                <div class="container no-bottom">
+                <div class="container no-bottom" style="height:820px">
                     <div class="contact-form no-bottom"> 
                         <div class="formSuccessMessageWrap" id="formSuccessMessageWrap">
                             <div class="big-notification green-notification">
